# storage-spatial-index-benchmark

./: CMakeLists.txt  README.md  benchmark_boost.cpp  benchmark_libspatialindex.cpp  benchmark_sqlite3.cpp  utils.hpp
